--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,14 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
     <title>Flancoin - Minecraft Criptoserver</title>
-    
     <!-- Custom Styles -->
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/FlanPage.css">
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <!-- Plyr CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/plyr@3.7.4/dist/plyr.css" />
-    
+    <script src="https://terminal.jup.ag/main-v2.js"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
